--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yamsanivarun22.github.io/Chitti-Calculator",
   "name": "citti-calculator",
   "version": "0.1.0",
   "private": true,
